experimental/parser/testdata/parser/def/prefixes.proto.stderr.txt
error: unexpected `optional` modifier on message definition
  --> testdata/parser/def/prefixes.proto:19:1
   |
19 | optional message Foo {
   | ^^^^^^^^

error: unexpected `repeated` modifier on oneof definition
  --> testdata/parser/def/prefixes.proto:24:5
   |
24 |     repeated oneof y {
   |     ^^^^^^^^

error: unexpected `repeated` modifier on enum definition
  --> testdata/parser/def/prefixes.proto:28:1
   |
28 | repeated enum Bar {}
   | ^^^^^^^^

error: unexpected `stream` modifier on message extension block
  --> testdata/parser/def/prefixes.proto:30:1
   |
30 | stream extend Foo {
   | ^^^^^^

error: unexpected `required` modifier on service definition
  --> testdata/parser/def/prefixes.proto:34:1
   |
34 | required repeated service Baz {
   | ^^^^^^^^

error: unexpected `repeated` modifier on service definition
  --> testdata/parser/def/prefixes.proto:34:10
   |
34 | required repeated service Baz {
   |          ^^^^^^^^

encountered 6 errors
